WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109090
[HTMLTemplateElement] Non </template> end tags should be ignored in "template contents" insertion mode.
https://bugs.webkit.org/show_bug.cgi?id=109090
Summary
[HTMLTemplateElement] Non </template> end tags should be ignored in "template...
Rafael Weinstein
Reported
2013-02-06 13:49:05 PST
Otherwise, the current context gets set to "in body" when it should remain undecided.
Attachments
Patch
(2.73 KB, patch)
2013-02-06 13:51 PST
,
Rafael Weinstein
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.97 KB, patch)
2013-02-06 14:40 PST
,
Rafael Weinstein
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Rafael Weinstein
Comment 1
2013-02-06 13:51:39 PST
Created
attachment 186913
[details]
Patch
Rafael Weinstein
Comment 2
2013-02-06 13:52:04 PST
Spec:
https://dvcs.w3.org/hg/webcomponents/raw-file/38536d37fb82/spec/templates/index.html#template-contents-insertion-mode
Adam Barth
Comment 3
2013-02-06 13:55:44 PST
Comment on
attachment 186913
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186913&action=review
> LayoutTests/html5lib/resources/template.dat:960 > +<body><template></div><div>Foo</div><template></template><tr></tr>
Should we add a test for <body><div><template></div><tr><td>Foo</td></tr></template> as well?
Rafael Weinstein
Comment 4
2013-02-06 14:39:59 PST
Comment on
attachment 186913
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186913&action=review
>> LayoutTests/html5lib/resources/template.dat:960 >> +<body><template></div><div>Foo</div><template></template><tr></tr> > > Should we add a test for > > <body><div><template></div><tr><td>Foo</td></tr></template> > > as well?
good idea. done.
Rafael Weinstein
Comment 5
2013-02-06 14:40:15 PST
Created
attachment 186924
[details]
Patch for landing
WebKit Review Bot
Comment 6
2013-02-06 16:16:59 PST
Comment on
attachment 186924
[details]
Patch for landing Clearing flags on attachment: 186924 Committed
r142049
: <
http://trac.webkit.org/changeset/142049
>
WebKit Review Bot
Comment 7
2013-02-06 16:17:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug