[HTMLTemplateElement] Non </template> end tags should be ignored in "template contents" insertion mode. https://bugs.webkit.org/show_bug.cgi?id=109090

Reviewed by Adam Barth.

Source/WebCore:

https://dvcs.w3.org/hg/webcomponents/raw-file/38536d37fb82/spec/templates/index.html#template-contents-insertion-mode.

Test added to html5lib suite.

* html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::processEndTag):

LayoutTests:

* html5lib/resources/template.dat:


Canonical link: https://commits.webkit.org/127297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142049 268f45cc-cd09-0410-ab3c-d52691b4dbfc